environment.Environment.scala.error
Erreur de compilation :
Environment:1: error: not found: value Direction
setDirection(dir:Direction.NORTH)
                 ^Environment:1: error: not found: value dir
setDirection(dir:Direction.NORTH)
             ^Environment:2: error: not found: type int
forward(1:int) 
          ^