environment.Environment.scala.code
setDirection(dir:Direction.NORTH)
forward(1:int)